--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,53 +1,186 @@
-body {
-  background-color: #202c39;
-  color: #fff;
+* {
+	margin: 0;
 }
 
-.menu {
+:root {
+	/* --main: #202c39; */
+	--main: #03071e;
+	--content: #fffdf7;
+	--title: #08021b;
+	--text: #000;
+	--orange: #f29559;
+	--dark-orange: #ee6f1b;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto+Slab&display=swap");
+
+body {
+	/* background-color: var(--main); */
+	background-image: url("../img/fundo-dark.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	color: #fff;
+}
+
+/* Teste................................................................ */
+.hero {
+	display: flex;
+	height: 500px;
+}
+.hero p {
+	/* align-items: center; */
+	/* justify-content: center; */
+	margin: auto;
+	/* margin: 0 auto; */
+	/* margin-top: 150px; */
+	font-size: 35px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-align: center;
+	font-family: "Special Elite", cursive, monospace;
+}
+
+/* 
+.typing-animation {
+	animation: blinkCursor 700ms steps(60) infinite normal,
+		typing 4s steps(40) 1s normal both;
+}
+
+@keyframes typing {
+	from {
+		width: 0;
+	}
+	to {
+		width: 11em;
+	}
+}
+
+@keyframes blinkCursor {
+	from {
+		border-right: 1px solid rgba(255, 255, 255, 0.75);
+	}
+	to {
+		border-right-color: transparent;
+	}
+} */
+
+/* Fim TEste ******************************** */
 
 .menu ul {
-  display: flex;
-  justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
+	background: rgba(0, 0, 0, 0.5);
 }
 
 .menu li {
-  list-style: none;
-  /* flex-direction: column; */
-  /* justify-content: flex-end; */
-  /* align-items: center; */
-  font-size: 25px;
-
-  padding: 20px 10px;
+	list-style: none;
+	/* flex-direction: column; */
+	/* justify-content: flex-end; */
+	/* align-items: center; */
+	font-size: 20px;
+	padding: 20px 30px;
 }
 
 .menu li a {
-  color: #fff;
-  text-decoration: none;
+	color: #fff;
+	text-decoration: none;
+}
+
+.menu li a:hover {
+	border-bottom: 1px solid var(--orange);
+	padding-bottom: 12px;
+}
+
+.title {
+	/* padding-top: 20px; */
+	font-size: 39px;
+	color: var(--title);
+	padding-top: 50px;
+	font-family: "Open Sans Condensed", sans-serif;
+}
+
+.container {
+	margin: 0 auto;
+	/* width: 100%; */
+	width: 960px;
 }
 
 main {
-  height: 100%;
+	/* height: 100%; */
+}
+
+.skills {
+	height: 500px;
+	background-color: var(--content);
+}
+
+.skills ul li span {
+	color: var(--text);
+}
+
+.list-skills {
+	display: flex;
+	margin-top: 100px;
+	justify-content: center;
+}
+
+.list-skills li {
+	padding: 10px 35px;
+}
+
+.list-skills i {
+	font-size: 40px;
+	color: #000;
+	padding: 0 10px;
+}
+/*  Projects */
+.projects {
+	height: 500px;
+	background-color: #f2f2f2;
 }
 
 .projects-cards {
-  display: flex;
-  background-color: #283845;
-  padding: 15px 0;
+	display: flex;
+	padding: 15px 0px;
 }
 
 .project-img {
-  width: 300px;
-  height: 230px;
+	/* width: 300px; */
+	background-image: cover;
+	width: 100%;
+	height: 230px;
+	border-radius: 5% 5% 0 0;
 }
 
 .project-card {
-  padding-left: 25px;
+	width: 250px;
+	/* padding: 10px; */
+	/* padding-left: 25px; */
+	border: 8px solid gray;
+	border-radius: 10%;
+	margin-right: 50px;
+	height: 290px;
+}
+
+.project-card-description {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+}
+
+.project-card-description p {
+	margin-top: 15px;
+	color: #000;
+	font-weight: 700;
+	font-family: "Roboto Slab", serif;
 }
 
 footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 100px;
+	background-color: #000;
+	font-family: "Open Sans Condensed", sans-serif;
 }
