--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,17 +28,47 @@ body {
 	display: flex;
 	height: 500px;
 }
-.hero p {
-	/* align-items: center; */
-	/* justify-content: center; */
+/* .hero p {
 	margin: auto;
-	/* margin: 0 auto; */
-	/* margin-top: 150px; */
 	font-size: 35px;
 	white-space: nowrap;
 	overflow: hidden;
-	text-align: center;
 	font-family: "Special Elite", cursive, monospace;
+} */
+
+.hero .typing-animation {
+	display: flex;
+	align-items: center;
+	/* justify-content: center; */
+	margin: 0 auto;
+	font-size: 35px;
+	/* white-space: nowrap; */
+	/* overflow: hidden; */
+	font-family: "Special Elite", cursive, monospace;
+}
+
+.hero span {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* float: left; */
+	/* position: fixed; */
+	padding: 15px;
+
+	/* margin: 0 auto; */
+	/* position: fixed; */
+	/* padding: 50px; */
+
+	/* display: flex; */
+	/* justify-content: flex-start; */
+	/* align-items: center; */
+	/* margin: 0 250px; */
+}
+
+a {
+	text-decoration: none;
+	list-style: none;
+	color: #fff;
 }
 
 /* 
@@ -79,7 +109,8 @@ body {
 	/* justify-content: flex-end; */
 	/* align-items: center; */
 	font-size: 20px;
-	padding: 20px 30px;
+	/* padding: 20px 30px; */
+	padding: 40px 30px;
 }
 
 .menu li a {
@@ -90,6 +121,18 @@ body {
 .menu li a:hover {
 	border-bottom: 1px solid var(--orange);
 	padding-bottom: 12px;
+}
+
+.menu .contact {
+	border: 1px solid #f3f3f3;
+	/* border-radius: 75%; */
+	border-radius: 350px;
+	padding: 12px 12px;
+	/* padding: 10px; */
+}
+
+.menu .contact:hover {
+	border: 1px solid var(--orange);
 }
 
 .title {
