--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,18 +18,18 @@
 
 body {	
 	color: #fff;
-	background-color: var(--background);
-	background-image: url("../img/firewatch.jpg");	
-
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
 }
 
 /* Teste................................................................ */
 .hero {
 	display: flex;
 	height: 450px;
+
+	background-color: var(--background);
+	background-image: url("../img/firewatch.jpg");	
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 /* .hero p {
 	margin: auto;
@@ -102,8 +102,9 @@ a {
 .menu {
 	position: sticky;
 	top: 0;
+	z-index: 1;
 
-	background: rgba(0, 0, 0, 0.5);	
+	background: rgba(0, 0, 0, 0.9);	
 }
 
 .menu ul {
@@ -160,10 +161,17 @@ a {
 	margin: 0 auto;
 	/* width: 100%; */
 	width: 960px;
+	/* display: flex;
+	flex-wrap: wrap; */
 }
 
 .skills {
 	height: 500px;
+	
+
+	display: flex;
+	flex-wrap: wrap;
+
 	background-color: var(--content);
 }
 
@@ -173,13 +181,17 @@ a {
 
 .list-skills {
 	display: flex;
+	justify-content: center;	
+	flex-wrap: wrap;
+
 	margin-top: 100px;
-	justify-content: center;
+	
 }
 
 .list-skills li {
 	list-style-type: none;
 	padding: 10px 35px;
+	width: 6rem;
 }
 
 .list-skills i {
@@ -201,34 +213,62 @@ a {
 }
 
 /*  Projects */
-.projects {
-	height: 500px;
+.projects {	
 	background-color: #f2f2f2;
+
+	display: flex;
+	flex-wrap: wrap;	
 }
 
 .projects-cards {
-	display: flex;	
+	display: flex;
+	flex-wrap: wrap;
+
+	height: 100%;
 	padding: 15px 0px;
-	width: 100%;
+	/* width: 60rem; */
+	width: 60%;
+
+	margin: 0 auto;
 }
 
 .project-img {
 	/* width: 300px; */
 	background-image: cover;
+
 	width: 100%;
 	height: 230px;
 	border-radius: 5% 5% 0 0;
+	box-shadow: 0px 4px 4px 3px rgba(0, 0, 0, 0.2);
+	position: relative;
+	/* z-index: 0; */
+				
+}
+
+/* TODO: Remover esse código e incluir o icône com a ação de ir direto para o github  */
+.project-card::before{
+position: absolute;
+   
+   content: "\f09b";
+   font: normal normal normal 2.4rem/1 FontAwesome;
+    color: #000;
+    
+	left: 79%;
+	top: 2px;    
+    /* background: green; */
+    z-index: 1;
 }
 
 .project-card {
-	/* width: 250px; */
-	width: 40rem;
-	/* padding: 10px; */
-	/* padding-left: 25px; */
+	position: relative;
+	
+	width: 15rem;
+	height: 20rem;
+	
 	border: 8px solid gray;
 	border-radius: 10%;
 	margin-right: 50px;
-	height: 290px;
+	margin-bottom: 2rem;
 }
 
 .project-card-description {
@@ -245,10 +285,10 @@ a {
 }
 
 footer {
-	display: flex;
-	align-items: center;
+	display: flex;	
 	justify-content: center;
-	padding: 100px;
+
+	padding: 130px;
 	background-color: #000;
 	font-family: "Open Sans Condensed", sans-serif;
 }
